Add data status notice for benchmark freshness

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         </div>
       </section>
 
+      <section class="data-status">
+        <div class="data-status-card">
+          <div>
+            <h2>Estado de los datos</h2>
+            <p id="data-status-text"></p>
+          </div>
+          <button class="data-status-action" type="button">Conectar fuentes en vivo</button>
+        </div>
+        <p class="note">
+          Para mostrar benchmarks recientes, conecta un origen verificable (leaderboards públicos o
+          reportes oficiales) y actualiza el dataset local.
+        </p>
+      </section>
+
       <main>
         <section class="grid" id="model-grid"></section>
       </main>
