Enable live benchmark source connection

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <div>
             <h2>Estado de los datos</h2>
             <p id="data-status-text"></p>
+            <p class="note" id="data-status-source"></p>
           </div>
           <button class="data-status-action" type="button">Conectar fuentes en vivo</button>
         </div>
